snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.pom.sha1
f604965eea33019fbce44b524bcc06e942a5761c